[gd_scene load_steps=17 format=3 uid="uid://cmsssbsoe6chl"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_gcu7q"]
[ext_resource type="Texture2D" uid="uid://y64m1xxp76vk" path="res://icon.svg" id="2_5ae48"]
[ext_resource type="Script" path="res://Character/Arm.gd" id="3_obpmv"]
[ext_resource type="Texture2D" uid="uid://b8ep3nwcv0y6w" path="res://Animations/hit_animations/swing03.png" id="4_coid0"]
[ext_resource type="Script" path="res://Character/MeleeAnimator.gd" id="5_5k823"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oosqe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g20un"]

[sub_resource type="AtlasTexture" id="AtlasTexture_radxo"]
atlas = ExtResource("2_5ae48")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qf0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_radxo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yeqcr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wjrel"]
atlas = ExtResource("4_coid0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a1c0"]
atlas = ExtResource("4_coid0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcf8l"]
atlas = ExtResource("4_coid0")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5bh"]
atlas = ExtResource("4_coid0")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_seqyc"]
atlas = ExtResource("4_coid0")
region = Rect2(256, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7oj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjrel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a1c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcf8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seqyc")
}],
"loop": false,
"name": &"melee_swing",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gcu7q")

[node name="HitBox" type="CollisionShape2D" parent="."]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_oosqe")
debug_color = Color(0.988235, 0, 0.294118, 0.419608)

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_g20un")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_4qf0m")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Cooldowns" type="Node" parent="."]

[node name="MeleeTimer" type="Timer" parent="Cooldowns"]
unique_name_in_owner = true
one_shot = true

[node name="RangedTimer" type="Timer" parent="Cooldowns"]
unique_name_in_owner = true
one_shot = true

[node name="Arm" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(40, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_obpmv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm"]
light_mask = 0
scale = Vector2(3, 4)
shape = SubResource("CircleShape2D_yeqcr")
debug_color = Color(0, 0.623529, 0.545098, 0.419608)

[node name="HitReset" type="Timer" parent="Arm"]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Arm"]
sprite_frames = SubResource("SpriteFrames_x7oj7")
animation = &"melee_swing"
script = ExtResource("5_5k823")

[connection signal="melee" from="." to="." method="_on_melee"]
[connection signal="melee" from="." to="Arm/AnimatedSprite2D" method="_on_player_melee"]
[connection signal="ranged" from="." to="." method="_on_ranged"]
[connection signal="timeout" from="Cooldowns/MeleeTimer" to="." method="_on_melee_timer_timeout"]
[connection signal="timeout" from="Cooldowns/RangedTimer" to="." method="_on_ranged_timer_timeout"]
[connection signal="timeout" from="Arm/HitReset" to="Arm" method="_on_hit_reset_timeout"]
[connection signal="animation_finished" from="Arm/AnimatedSprite2D" to="Arm/AnimatedSprite2D" method="_on_animation_finished"]
